engine/codex-rs/tui/src/snapshots/codex_tui__startup_draft__tests__startup_draft_onboarding_transition.snap
---
source: tui/src/startup_draft_tests.rs
assertion_line: 802
expression: frames
---
before onboarding: hidden (0x0 viewport)
---
after onboarding:

  >_ OpenAI Codex (v<VERSION>)
     loading

  Pull up a prompt.


› Ask Codex to do anything

  ? for shortcuts
